@startuml architecture
!define RECTANGLE class

skinparam rectangle {
    BackgroundColor<<handler>> LightBlue
    BackgroundColor<<service>> LightGreen
    BackgroundColor<<repository>> LightYellow
    BackgroundColor<<database>> LightCoral
}

title Simple Banking API - Hexagonal Architecture

package "HTTP Layer" {
    rectangle "Create Account Handler" <<handler>> as CAH
    rectangle "Get Account Handler" <<handler>> as GAH
    rectangle "Create Transaction Handler" <<handler>> as CTH
    rectangle "Get Transactions Handler" <<handler>> as GTH
    rectangle "Chi Router" <<handler>> as Router
}

package "Business Logic (Core)" {
    rectangle "Create Account Processor" <<service>> as CAP
    rectangle "Get Account Processor" <<service>> as GAP
    rectangle "Create Transaction Processor" <<service>> as CTP
    rectangle "Get Transactions Processor" <<service>> as GTP
    
    interface "Account Repository Port" as ARP
    interface "Transaction Repository Port" as TRP
    interface "OperationType Repository Port" as ORP
}

package "Data Layer (Infrastructure)" {
    rectangle "Account Repository\n(SQLite)" <<repository>> as AR
    rectangle "Transaction Repository\n(SQLite)" <<repository>> as TR
    rectangle "OperationType Repository\n(SQLite)" <<repository>> as OR
    database "SQLite Database" as DB
}

' HTTP to Processors
Router --> CAH
Router --> GAH
Router --> CTH
Router --> GTH
CAH --> CAP : uses
GAH --> GAP : uses
CTH --> CTP : uses
GTH --> GTP : uses

' Processors to Ports
CAP --> ARP : depends on
GAP --> ARP : depends on
CTP --> TRP : depends on
CTP --> ARP : depends on
CTP --> ORP : depends on
GTP --> TRP : depends on
GTP --> ARP : depends on

' Ports to Implementations
ARP <|.. AR : implements
TRP <|.. TR : implements
ORP <|.. OR : implements

' Repositories to Database
AR --> DB
TR --> DB
OR --> DB

note right of Router
  RESTful endpoints:
  - POST /v1/accounts
  - GET /v1/accounts/:id
  - POST /v1/transactions
  - GET /v1/accounts/:id/transactions
end note

note right of CTP
  Business Logic:
  - Validates input
  - Normalizes amount
    (auto-converts sign)
  - Orchestrates repos
end note

note right of GTP
  Pagination Logic:
  - Validates accountId
  - Applies limit/offset
  - Calculates total pages
  - Returns paginated results
end note

@enduml
